Added back javadoc plugin